softmax tune_hyperparameters

--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -196,10 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d42765cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.322833\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -236,10 +245,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4c2626ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: 3.292500 analytic: 3.292500, relative error: 1.670378e-08\n",
+      "numerical: 1.336041 analytic: 1.336041, relative error: 3.106650e-08\n",
+      "numerical: 1.671648 analytic: 1.671648, relative error: 8.834643e-10\n",
+      "numerical: -2.054014 analytic: -2.054014, relative error: 4.506260e-08\n",
+      "numerical: 1.082679 analytic: 1.082679, relative error: 5.261048e-08\n",
+      "numerical: 1.686170 analytic: 1.686170, relative error: 1.043347e-10\n",
+      "numerical: 0.114194 analytic: 0.114194, relative error: 1.757135e-07\n",
+      "numerical: 0.117740 analytic: 0.117740, relative error: 2.611914e-07\n",
+      "numerical: 2.078556 analytic: 2.078556, relative error: 1.008565e-08\n",
+      "numerical: -0.574058 analytic: -0.574058, relative error: 1.540916e-07\n",
+      "numerical: -2.464629 analytic: -2.464629, relative error: 6.676301e-09\n",
+      "numerical: -0.650050 analytic: -0.650050, relative error: 1.032756e-07\n",
+      "numerical: 0.630697 analytic: 0.630697, relative error: 2.697877e-08\n",
+      "numerical: -3.211711 analytic: -3.211711, relative error: 6.161730e-09\n",
+      "numerical: 1.573389 analytic: 1.573389, relative error: 2.503623e-08\n",
+      "numerical: 5.137467 analytic: 5.137467, relative error: 3.881168e-09\n",
+      "numerical: 1.188327 analytic: 1.188327, relative error: 1.537479e-08\n",
+      "numerical: -1.272078 analytic: -1.272078, relative error: 1.284899e-08\n",
+      "numerical: -2.416626 analytic: -2.416626, relative error: 1.547633e-08\n",
+      "numerical: 0.877243 analytic: 0.877243, relative error: 3.857356e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -259,10 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "434e757f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.322833e+00 computed in 0.290277s\n",
+      "vectorized loss: 2.322833e+00 computed in 0.007740s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
