--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2e5e374d",
    "metadata": {
     "tags": [
@@ -343,7 +343,16 @@
     ],
     "test": "tuning"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (515934823.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_50212\\515934823.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    results = {}\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
@@ -361,23 +370,32 @@
     "# This should be identical to the validation that you did for the SVM; save    #\n",
     "# the best trained softmax classifer in best_softmax.                          #\n",
     "################################################################################\n",
-    "\n",
+    "X_train, y_train, X_val, y_val, X_test, y_test, X_dev, y_dev = preprocess_data()\n",
     "# Provided as a reference. You may or may not want to change these hyperparameters\n",
-    "learning_rates = [1e-7, 5e-7]\n",
+    "learning_rates = [1e-8, 3e-7]\n",
     "regularization_strengths = [2.5e4, 5e4]\n",
+    "lr_range = np.linspace(learning_rates[0], learning_rates[1], 8)\n",
+    "reg_range = np.linspace(regularization_strengths[0], regularization_strengths[1], 8)\n",
+    "# 定义损失函数训练的模型\n",
+    "softmax = Softmax()\n",
+    "tic = time.time()\n",
     "\n",
-    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "for lr in tqdm(lr_range):\n",
+    "    for reg in reg_range:\n",
+    "        loss_hist = softmax.train(X_train, y_train, learning_rate=lr, reg=reg, num_iters=500, verbose=False)\n",
+    "        y_train_pred = softmax.predict(X_train)\n",
+    "        y_val_pred = softmax.predict(X_val)\n",
+    "        acc_train = np.mean(y_train == y_train_pred)\n",
+    "        acc_val = np.mean(y_val == y_val_pred)\n",
+    "        # load result into results\n",
+    "        results[(lr, reg)] = (acc_train, acc_val)\n",
+    "        if acc_val > best_val:\n",
+    "            best_val = acc_val\n",
+    "            best_softmax = softmax\n",
+    "        # Print out results.\n",
+    "        print('lr %e reg %e train accuracy: %f val accuracy: %f' % (\n",
+    "            lr, reg, acc_train, acc_val))\n",
     "\n",
-    "pass\n",
-    "\n",
-    "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-    "    \n",
-    "# Print out results.\n",
-    "for lr, reg in sorted(results):\n",
-    "    train_accuracy, val_accuracy = results[(lr, reg)]\n",
-    "    print('lr %e reg %e train accuracy: %f val accuracy: %f' % (\n",
-    "                lr, reg, train_accuracy, val_accuracy))\n",
-    "    \n",
     "print('best validation accuracy achieved during cross-validation: %f' % best_val)"
    ]
   },
