softmax implement ReLU_activation

--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "da91c872",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
       "Testing affine_backward function:\n",
       "dx error:  5.399100368651805e-11\n",
       "dw error:  9.904211865398145e-11\n",
-      "db error:  1.0\n"
+      "db error:  2.4122867568119087e-11\n"
      ]
     }
    ],
@@ -263,10 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "73ea11eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_forward function:\n",
+      "difference:  4.999999798022158e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
@@ -293,10 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4852deab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_backward function:\n",
+      "dx error:  3.2756349136310288e-12\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "x = np.random.randn(10, 10)\n",
