--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -363,10 +363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0ce1580a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward and affine_relu_backward:\n",
+      "dx error:  6.750562121603446e-11\n",
+      "dw error:  8.162015570444288e-11\n",
+      "db error:  7.826724021458994e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "np.random.seed(231)\n",
@@ -402,10 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e14d422b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss:  8.999602749096233\n",
+      "dx error:  1.4021566006651672e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.3025458445007376\n",
+      "dx error:  8.234144091578429e-09\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "num_classes, num_inputs = 10, 50\n",
