--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -465,10 +465,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b8ed0018",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 1.52e-08\n",
+      "W2 relative error: 3.48e-10\n",
+      "b1 relative error: 6.55e-09\n",
+      "b2 relative error: 4.33e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 8.18e-07\n",
+      "W2 relative error: 2.85e-08\n",
+      "b1 relative error: 1.09e-09\n",
+      "b2 relative error: 9.09e-10\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D, H, C = 3, 5, 50, 7\n",
